syntax = "proto3";

package brain;

option java_package = "dev.kbd.vekku_server.brain";
option java_multiple_files = true;

service BrainService {
  // Takes raw text, chunks it semantically, and returns regions with tags
  rpc Analyze (AnalyzeRequest) returns (AnalyzeResponse);

  // Teaches the brain a new Concept (Tag)
  rpc Learn (LearnRequest) returns (Empty);

  // Suggests existing tags based on content
  rpc SuggestTags (SuggestTagsRequest) returns (SuggestTagsResponse);
}

message Empty {}

message AnalyzeRequest {
  string text = 1;
}

message AnalyzeResponse {
  repeated ContentRegion regions = 1;
}

message ContentRegion {
  int32 start_index = 1;
  int32 end_index = 2;
  string content = 3;
  repeated string tags = 4;
}

message LearnRequest {
  string tag_name = 1;
}

message SuggestTagsRequest {
  string content = 1;
}

message SuggestTagsResponse {
  repeated string tags = 1;
}
