// import { BrainServiceHandlers } from '../protos/brain'; // We will generate types later or use loose types for now
// import { AnalyzeRequest, AnalyzeResponse, LearnRequest, Empty } from '../protos/brain'; // Conceptual types

// Since we haven't generated static types yet, we'll use 'any' for the untyped gRPC interface for now.
// For this scaffold, we will implement the logic directly.
// or define a simple interface matching the proto.
// For this scaffold, we will implement the logic directly.

export const BrainController = {
    analyze: (call: any, callback: any) => {
        const { text } = call.request;
        console.log(`[Analyze] Received text: ${text?.substring(0, 50)}...`);

        // Dummy response
        const response = {
            regions: [
                {
                    start_index: 0,
                    end_index: text?.length || 0,
                    content: text || "",
                    tags: ["DUMMY_TAG", "SCAFFOLDING"]
                }
            ]
        };

        callback(null, response);
    },

    learn: (call: any, callback: any) => {
        const { tag_name } = call.request;
        console.log(`[Learn] Learning new tag: ${tag_name}`);
        callback(null, {});
    }
};
